--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ keywords = [
 ]
 readme = "README.md"
 description = "Image processing lib for Rust"
+documentation = "https://docs.rs/raster/"
 homepage = "https://github.com/kosinix/raster"
 repository = "https://github.com/kosinix/raster.git"
 
