--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ rust:
 matrix:
   allow_failures:
     - rust: nightly
+
+before_script:
+  - sudo mkdir -p /home/travis/build/kosinix/raster/tests/out
+  - sudo chmod -R 0777 /home/travis/build/kosinix/raster/tests/
