--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ repository = "https://github.com/kosinix/raster.git"
 [dependencies.image]
 version = "0.10.3"
 default-features = false
-features = ["jpeg", "ico"]
+features = ["jpeg"]
 
 [dependencies.gif]
 version = "0.9.0"
